fix content wrap gap between nav

--- a/dev/scss/_flex-aside.scss
+++ b/dev/scss/_flex-aside.scss
@@ -2,7 +2,7 @@
 @use 'mixins' as *;
 
 .content-wrap{
-    padding-top: 2rem;
+    padding-top: 1rem;
 
    @media (min-width:64em){
        & {
